<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:id="@+id/cl_top_big">

    <TextView
        android:id="@+id/lock_read_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp18"
        android:text="@string/lock_read_time"
        android:layout_marginTop="@dimen/dp44"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lock_read_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/lock_read_date"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/lock_read_week"
        app:layout_constraintStart_toStartOf="@+id/lock_read_week" />

    <TextView
        android:id="@+id/lock_read_week"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/lock_read_week"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lock_read_time"
        app:layout_constraintStart_toEndOf="@+id/lock_read_time" />


    <TextView
        android:id="@+id/tv_lock_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp6"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/lock_read_time"
        app:layout_constraintEnd_toStartOf="@+id/progressbar_lock_battery"
        app:layout_constraintTop_toTopOf="@+id/lock_read_time" />

    <ProgressBar
        android:id="@+id/progressbar_lock_battery"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="@dimen/dp32"
        android:layout_height="@dimen/dp14"
        android:layout_marginRight="@dimen/dp18"
        android:background="@drawable/lock_battery_bg"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/lock_seekbar_battery_bg"
        app:layout_constraintBottom_toBottomOf="@+id/lock_read_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lock_read_time" />

</android.support.constraint.ConstraintLayout>