<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="@drawable/lock_dlalog_bg"
        android:layout_gravity="center"
        >
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/dp26"
            android:layout_height="@dimen/dp26"
            android:padding="6dp"
            android:src="@drawable/common_icon_close"
            android:layout_marginBottom="@dimen/dp18"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="9dp"
            android:layout_marginRight="9dp"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_default="spread"
            android:textColor="@color/comment_dlg_text"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintWidth_default="spread"
            android:textSize="16sp"
            android:textColor="@color/comment_dlg_text"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            android:text="@string/lock_permission_navigate_more"
            android:gravity="left|center_vertical"
            android:layout_marginTop="@dimen/dp18"
            android:paddingLeft="@dimen/dp12"
            android:background="@drawable/lock_shape_dialog_text"/>

        <ImageView
            android:id="@+id/iv_arraw_1"
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_share"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="5dp"
            android:src="@drawable/lock_icon_arraw_down"/>

        <TextView
            android:id="@+id/tv_permission"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintWidth_default="spread"
            android:textSize="16sp"
            android:textColor="@color/comment_dlg_text"
            app:layout_constraintTop_toBottomOf="@id/iv_arraw_1"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            android:text="@string/lock_permission_navigate_permission"
            android:gravity="left|center_vertical"
            android:layout_marginTop="5dp"
            android:paddingRight="@dimen/dp10"
            android:paddingLeft="@dimen/dp12"
            android:background="@drawable/lock_shape_dialog_text"
            android:drawablePadding="@dimen/dp6"/>

        <ImageView
            android:id="@+id/iv_arraw_2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/lock_icon_arraw_down"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_permission"
           />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_app_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintTop_toBottomOf="@id/iv_arraw_2"
        app:layout_constraintLeft_toLeftOf="@id/tv_title"
        app:layout_constraintRight_toRightOf="@id/tv_title"
        android:paddingLeft="@dimen/dp12"
        android:background="@drawable/lock_shape_dialog_text"
        android:layout_marginTop="5dp"
        >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/common_logo_launcher"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/comment_dlg_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_logo"
            android:layout_marginLeft="6dp"/>

    </android.support.constraint.ConstraintLayout>



        <ImageView
            android:id="@+id/iv_arraw_3"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/lock_icon_arraw_down"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_app_name" />

        <TextView
            android:id="@+id/tv_lock_show"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintWidth_default="spread"
            android:textSize="16sp"
            android:textColor="@color/comment_dlg_text"
            app:layout_constraintTop_toBottomOf="@id/iv_arraw_3"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            android:text="@string/lock_permission_navigate_lock_view"
            android:gravity="left|center_vertical"
            android:paddingRight="@dimen/dp10"
            android:paddingLeft="@dimen/dp12"
            android:layout_marginTop="5dp"
            android:background="@drawable/lock_shape_dialog_text"
            android:drawableRight="@drawable/common_icon_switch_select"
            android:drawablePadding="@dimen/dp6"/>




        <TextView
            android:id="@+id/tv_folat_show"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintWidth_default="spread"
            android:textSize="16sp"
            android:textColor="@color/comment_dlg_text"
            app:layout_constraintTop_toBottomOf="@id/tv_lock_show"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintRight_toRightOf="@id/tv_title"
            android:text="显示悬浮窗"
            android:gravity="left|center_vertical"
            android:paddingRight="@dimen/dp10"
            android:paddingLeft="@dimen/dp12"
            android:layout_marginTop="10dp"
            android:background="@drawable/lock_shape_dialog_text"
            android:drawableRight="@drawable/common_icon_switch_select"
            android:drawablePadding="@dimen/dp6"/>

        <Button
            android:id="@+id/btn_open"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/dp26"
            android:layout_marginBottom="16dp"
            android:background="@drawable/lock_shape_open_btn"
            android:text="@string/lock_permission_navigate_open"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_folat_show" />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>
